Update plugins support & propagating exception from manager to kramerius core etc..
